// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`confirmation Renders \`confirmation\` with empty modal 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="#2fab63"
>
  <span>
    Are you sure?
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="error v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        No
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Yes
      </div>
    </button>
  </div>
</modal-wrapper-stub>
`;

exports[`confirmation Renders \`confirmation\` with hidden title 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="#2fab63"
>
  <span
    class="subheading"
  >
    Confirmation text
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="error v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        No
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Yes
      </div>
    </button>
  </div>
</modal-wrapper-stub>
`;

exports[`confirmation Renders \`confirmation\` with text, title and actions 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="#2fab63"
>
  <span>
    Confirmation title
  </span>
  <span
    class="subheading"
  >
    Confirmation text
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="error v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        No
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Yes
      </div>
    </button>
  </div>
</modal-wrapper-stub>
`;
